--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
 :root {
   --principal: #d1b3bd;
   --principal-hover: #c39ba9;
-  --fondo: #F8F8F8; /* Color hueso */
+  --fondo: #FAFAFA; /* Blanco muy sutil para el fondo */
   --texto: #333333;
   --texto-secundario: #666666;
   --rosa-elegante: #e91e63;
